# OSM-BKI-ROS

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  baseline_evaluation.ipynb  class_heights_mcd.ipynb  collect_class_heights_mcd.py  docker-compose.yml  mcd_evaluation.ipynb  optimize_height_dirichlet_kitti360.py  optimize_height_dirichlet_mcd.py  optimize_height_gaussians_mcd.py  optimize_osm_cm.py  optimize_osm_cm_kitti360.py  optimize_osm_cm_mcd.py  optimize_osm_cm_orig.py  optimize_osm_cm_scaled.py  optimize_osm_cm_scaled_BEST.py  optimize_osm_cm_scaled_kitti360.py  package.xml  per_scan_class_heights_mcd.ipynb  per_scan_class_heights_mcd.json
config/datasets/: confusion_matrix_mcd.yaml  height_dirichlet_kitti360.yaml  height_dirichlet_mcd.yaml  height_gaussians_kitti360.yaml  height_gaussians_mcd.yaml  kitti_05.yaml  kitti_15.yaml  labels_common.yaml  labels_kitti360.yaml  labels_mcd.yaml  labels_semkitti.yaml  mcd.yaml  mcd_colors.yaml  osm_confusion_matrix.yaml  osm_confusion_matrix_mcd.yaml  osm_confusion_matrix_optimized.yaml  osm_confusion_matrix_optimized_BEST.yaml  osm_confusion_matrix_optimized_KITTI360_NEW.yaml  osm_confusion_matrix_optimized_MCD_NEW.yaml  osm_confusion_matrix_optimized_kitti360 copy.yaml  osm_confusion_matrix_optimized_kitti360.yaml  osm_confusion_matrix_optimized_kitti360_14class.yaml  osm_confusion_matrix_optimized_mcd.yaml  osm_confusion_matrix_optimized_no_none.yaml  osm_visualizer.yaml  semantickitti.yaml  semantickitti_colors.yaml  sim_unstructured_annotated.yaml
config/datasets/trash/: osm_visualizer.yaml  osm_visualizer_kitti360.yaml
config/methods/: cu_north_campus.yaml  kitti360.yaml  kitti360_0000_indomain_no_height.yaml  kitti360_0000_indomain_with_height.yaml  kitti360_0009_indomain_no_height.yaml  kitti360_0009_indomain_with_height.yaml  kitti360_no_height.yaml  kitti360_with_height.yaml  mcd.yaml  mcd_kitti360_no_height.yaml  mcd_kitti360_with_height.yaml  mcd_mcd_no_height.yaml  mcd_mcd_with_height.yaml  osm_bki.yaml  semantic_bki.yaml
eval/: baseline_evaluation.ipynb  osm_bki_eval.ipynb  test_baseline_eval.py  test_eval.py
height_kernel/: README.md  align_trajectory.py  config.yaml  convert_laz_to_dem_dsm.py  dem_query.py  dem_visualizer_node.py  evaluate_ablation.py  height_kernel.py  merge_tiles.py  precompute_dem_grid.py  precompute_dem_grid_mcd.py  prompt_14class_split.txt  prompt_analysis_for_claude_chat.md  prompt_full_run.txt  prompt_kitti360_all.txt  prompt_kitti360_indomain.txt  prompt_mcd.txt  run_ablation.sh  run_ablation_indomain.sh  run_ablation_mcd.sh
height_kernel/results_static_gaussian/: README.md  exp1_results.txt  exp2_results.txt  exp3_results.txt
include/osm_bki/common/: dem_height_query.h  markerarray_pub.h  osm_geometry.h  osm_visualizer.h  point3f.h
include/osm_bki/dataset_devkit/: kitti360_util.h  mcd_util.h
include/osm_bki/mapping/: bki.h  bkiblock.h  bkioctomap.h  bkioctree.h  bkioctree_node.h
include/semantic_bki/common/: markerarray_pub.h  osm_geometry.h  osm_visualizer.h
include/semantic_bki/dataset_devkit/: kitti_util.h  mcd_util.h  semantickitti_util.h
include/semantic_bki/mapping/: bki.h  bkioctomap.h  bkioctree_node.h
launch/: cu_north_campus_launch.py  kitti360_launch.py  kitti_node_launch.py  mcd_launch.py  mcd_node_launch.py  mcd_with_osm_launch.py  semantickitti_node_launch.py  toy_example_node_launch.py
rviz/: cu_north_campus_node.rviz  kitti360_node.rviz  kitti_node.rviz  mcd_node.rviz  semantickitti_node.rviz  toy_example_node.rviz
scripts/: collect_per_scan_class_heights_mcd.py  optimize_height_dirichlet_kitti360.py  optimize_height_dirichlet_mcd.py  optimize_height_gaussians_kitti360.py  optimize_height_gaussians_mcd.py  optimize_osm_cm_kitti360.py  optimize_osm_cm_mcd.py  plot_height_dirichlet.py  view_north_campus_trajectory.py
src/: kitti360_node.cpp  kitti_node.cpp  mcd_node.cpp  osm_visualizer_node.cpp  semantickitti_node.cpp  toy_example_node.cpp
src/common/: osm_visualizer.cpp  point3f.cpp
src/mapping/: bkiblock.cpp  bkioctomap.cpp  bkioctree.cpp  bkioctree_node.cpp
