<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>semantic_bki</name>
  <version>0.0.1</version>
  <description>The semantic_bki package</description>
  <maintainer email="ganlu@umich.edu">Lu Gan</maintainer>
  <license>MIT</license>
  <author email="ganlu@umich.edu">Lu Gan</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>Eigen3</depend>
  <depend>ament_index_cpp</depend>
  <depend>yaml-cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
